@@ -3,6 +3,7 @@ from trytond.pool import Pool
 from .dunning import *
 from .batch import *
 from .party import *
+from .event import *
 
 
 def register():
@@ -13,4 +14,5 @@ def register():
         DunningCreationBatch,
         DunningTreatmentBatch,
         Party,
+        EventLog,
         module='account_dunning_cog', type_='model')
