@@ -4,6 +4,8 @@ depends:
     res
     cog_utils
     account_dunning
+extras_depend:
+    event_log
 xml:
     dunning.xml
     party.xml
