@@ -38,7 +38,7 @@
         <record model="ir.action.act_window" id="act_event_log_relate_form">
             <field name="name">Event Logs</field>
             <field name="res_model">event.log</field>
-            <field name="domain" eval="[('object_', '=', ('contract',Eval('active_id')))]" pyson="1"/>
+            <field name="domain" eval="[('contract', 'in', Eval('active_ids'))]" pyson="1"/>
         </record>
         <record model="ir.action.keyword" id="act_event_log_relate_keyword">
             <field name="keyword">form_relate</field>
