@@ -7,6 +7,7 @@ depends:
     offered
 extras_depend:
     report_engine
+    event_log
 xml:
     icon.xml
     contract.xml
