@@ -11,6 +11,7 @@ depends:
     premium_insurance
 extras_depend:
     contract_term_renewal
+    event_log
 xml:
     product.xml
     invoice.xml
