@@ -8,6 +8,8 @@ depends:
     account_payment_cog
     account_cog
     contract_insurance_invoice
+extras_depend:
+    event_log
 xml:
     payment.xml
     offered.xml
