@@ -5,6 +5,8 @@ depends:
     contract_insurance
     report_engine
     rule_engine
+extras_depend:
+    event_log
 xml:
     contract.xml
     rule_engine.xml
