@@ -5,6 +5,8 @@ depends:
     process_cog
     offered
     contract
+extras_depend:
+    event_log
 xml:
     endorsement.xml
     offered.xml
